<resources>
    <string name="app_name">MusicFinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address_txt">Email Address</string>
    <string name="password_txt">Password</string>
    <string name="confirm_password_txt">Confirm Password</string>
    <string name="create_account_btn_txt">Create Account</string>
    <string name="playlists_menu_caption">Playlists</string>
    <string name="favorite_artists_menu_caption">Favorite Artists</string>
    <string name="settings_menu_caption">Settings</string>
    <string name="logout_menu_caption">Logout</string>
    <string name="toolbar_title_txt">MusicApp</string>
    <string name="app_title_text">Audiophile</string>
    <string name="sign_in_btn_txt">Sign In</string>
    <string name="new_account_btn_txt">New Account</string>
    <string name="results_artist_name">Artist Name</string>
    <string name="results_txt" />
    <string name="search_result_txt_field_value" />
    <string name="discography_txt">Discography</string>
    <string name="search_for_artist_caption">Search For Artist:</string>
    <string name="track_instructions_txt">**click song to add to playlist</string>
    <string name="playlist_caption">Playlist</string>
    <string name="artist_playlist_caption">Artist</string>
    <string name="song_playlist_caption">Song</string>
    <string name="create_a_new_account_caption">Create Account</string>
    <string name="favorite_artists_caption">Favorite Artists</string>
    <string name="artist_name_artist_view">Artist:</string>
    <string name="add_favorite_caption">Add Favorite</string>
    <string name="user_name_hint">User Name</string>
    <string name="re_enter_password_hint">Re-Enter Password</string>
    <string name="submit_btn_text">Submit</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="favorites_btn_text">Favorites</string>
    <string name="playlists_btn_txt">Playlists</string>
    <string name="email_hint">eMail</string>
    <string name="password_hint">Password</string>
    <string name="blank_txt" />
    <string name="artist_playlist_text">Artist</string>
    <string name="song_playlist_txt">Song</string>

</resources>