<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:id="@+id/signin_fragment"
    tools:context=".SignInFragment">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="65dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:text="@string/app_title_text"
        android:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@+id/email_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/sign_in_edit_text"
        android:hint="@string/email_hint"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/password_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_field"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/sign_in_edit_text"
        android:textSize="18sp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_field" />

    <Button
        android:id="@+id/signin_btn"
        style="@style/sign_in_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:clickable="false"
        android:text="@string/sign_in_btn_txt"
        app:layout_constraintEnd_toStartOf="@+id/create_acct_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <Button
        android:id="@+id/create_acct_btn"
        style="@style/sign_in_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/new_account_btn_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signin_btn"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <include
        layout="@layout/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/create_acct_btn" />



    <TextView
        android:id="@+id/error_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/blank_txt"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/email_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />



</androidx.constraintlayout.widget.ConstraintLayout>
