<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:id="@+id/create_new_fragment"
    tools:context=".CreateUserFragment">

    <TextView
        android:id="@+id/create_new_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/create_a_new_account_caption"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/displayName_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@id/displayName_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_new_title" />

    <EditText
        android:id="@+id/displayName_field"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/sign_in_edit_text"
        android:hint="@string/user_name_hint"
        app:layout_constraintBottom_toTopOf="@+id/email_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_new_title" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/sign_in_edit_text"
        android:hint="@string/email_hint"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/password_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayName_field" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/sign_in_edit_text"
        android:textSize="18sp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_field" />

    <EditText
        android:id="@+id/confirm_password_field"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/sign_in_edit_text"
        android:textSize="18sp"
        android:hint="@string/re_enter_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_field" />

    <Button
        android:id="@+id/submit_btn"
        style="@style/sign_in_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:clickable="false"
        android:text="@string/submit_btn_text"
        app:layout_constraintEnd_toStartOf="@id/cancel_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_field" />

    <Button
        android:id="@+id/cancel_btn"
        style="@style/sign_in_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/cancel_btn_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/submit_btn"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_field" />


</androidx.constraintlayout.widget.ConstraintLayout>
